# ragger_rust

./: .gitignore  Cargo.toml  README.md  ragger.db
migrations/2020-09-06-131710_createWordsTable/: down.sql  up.sql
migrations/2021-01-16-055632_createReviewsTable/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
