[package]
name = "ragger_api"
version = "0.1.0"
authors = ["lvpiao <lvpiao@blizzmi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#structopt = "0.3.10"
clap="3.0.0-beta.1"
reqwest = { version = "0.10", features = ["json","blocking"] }
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
rust-crypto = "^0.2"
chrono = "0.4.15"
serde_json="1.0"
serde = {version="1.0", features=["derive"]}
diesel = { version = "1.4.0", features = ["sqlite"] }
dotenv = "0.10"




